<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        tools:ignore="MissingConstraints">

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/account_name"
                android:id="@+id/account_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:id="@+id/check"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/sender_account_name"
                android:id="@+id/sender_account_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/receiver_account_name"
                android:id="@+id/receiver_account_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/transfer_amount"
                android:id="@+id/amount"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/memo"
                android:id="@+id/memo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/private_key"
                android:id="@+id/private_key"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer"
                android:id="@+id/transfer"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>